--- a/it's my project/header.html
+++ b/it's my project/header.html
@@ -126,37 +126,37 @@
                 <div id="rotate"class="rotate fl ">
                     <ul id="promoInner"class="promo-list clearfix">
                         <li class="promo-item fl">
-                            <a href="#">
+                            <a href="#"id="zgl">
                                 <img src="img/zgl.jpg" class="show"alt="诸葛亮新造型爆料"/>
                             </a>
                         </li>
                         <li class="promo-item fl">
-                            <a href="#">
+                            <a href="#"id="sds">
                                 <img src="img/sds.jpg" alt="圣斗士头像框登场"/>
                             </a>
                         </li>
                         <li class="promo-item fl">
-                            <a href="#">
+                            <a href="#"id="xy">
                                 <img src="img/xy.jpg" alt="项羽马克逆风教学"/>
                             </a>
                         </li>
                         <li class="promo-item fl">
-                            <a href="#">
+                            <a href="#"id="sc">
                                 <img src="img/sc.jpg" alt="最全孙策全教学"/>
                             </a>
                         </li>
                         <li class="promo-item fl">
-                            <a href="#">
+                            <a href="#"id="lr">
                                 <img src="img/zy.jpg" alt="致敬国之利刃"/>
                             </a>
                         </li>
                     </ul>
                     <div id="promoTrigger" class="rbox clearfix">
-                        <span><a href="#">诸葛亮新造型爆料</a></span>
-                        <span><a href="#">圣斗士头像框登场</a></span>
-                        <span><a href="#">项羽马克逆风教学</a></span>
-                        <span><a href="#">最全孙策全教学</a></span>
-                        <span><a href="#">致敬国之利刃</a></span>
+                        <span><a href="#zgl">诸葛亮新造型爆料</a></span>
+                        <span><a href="#sds">圣斗士头像框登场</a></span>
+                        <span><a href="#xy">项羽马克逆风教学</a></span>
+                        <span><a href="#sc">最全孙策全教学</a></span>
+                        <span><a href="#lr">致敬国之利刃</a></span>
                     </div>
                 </div>
                 <div class="news_center fl">
@@ -253,7 +253,7 @@
 								<span>【上分拍档】第38期 ：孙策+小乔统治天下，凌驾群雄</span>
 							</li>
 							<li>
-								<img src="img/item4.jpg" alt="">
+								<img src="img/item4.jpg">
 								<span class="play-bar">
 									<em class="mr">19.2</em>
 									<em>2018-08-07</em>
@@ -301,61 +301,63 @@
 						<a href="#"class="more_btn">更多</a>
 					</div>
 					<div class="item_sub">
-						<a href="#"class="h1"id="h1">最新英雄</a><span></span>
-						<a href="#"class="h2">最新皮肤</a><span></span>
-						<a href="#"class="h3">周免英雄</a><span></span>
+						<a href="#newhero"class="h1"id="h1">最新英雄</a><span></span>
+						<a href="#newskin"class="h2">最新皮肤</a><span></span>
+						<a href="#freehero"class="h3">周免英雄</a><span></span>
 					</div>
                     <!-- 新英雄-->
-                    <div class="m-1">
-                        <div class="skin1">
-                            <a href="#"><img src="img/510.jpg"></a>
+                    <div>
+                        <div class="m-1"id="newhero">
+                            <div class="skin1">
+                                <a href="#"><img src="img/510.jpg"></a>
+                            </div>
+                            <div class="skin1_cont">
+                                <p>新英雄孙策</p>
+                                <p>上线时间:2018-07-17</p>
+                            </div>
+                            <div class="hreo_pic_list clearfix">
+                                <ul>
+                                    <li><a href="#"><img src="img/125.jpg"><span>元歌</span></a></li>
+                                    <li><a href="#"><img src="img/197.jpg"><span>奕星</span></a></li>
+                                    <li><a href="#"><img src="img/503.jpg"><span>狂铁</span></a></li>
+                                    <li><a href="#"><img src="img/504.jpg"><span>米莱迪</span></a></li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="skin1_cont">
-                            <p>新英雄孙策</p>
-                            <p>上线时间:2018-07-17</p>
+                        <!-- 新皮肤-->
+                        <div class="new_skin2" id="newskin">
+                            <div class="skin1">
+                                <a href="#"><img src="img/137_skin.jpg"></a>
+                            </div>
+                            <div class="skin1_cont">
+                                <p>新英雄: 司马懿-魇语军师</p>
+                                <p>上线时间:2018-08-23</p>
+                            </div>
+                            <div class="hreo_pic_list clearfix">
+                                <ul>
+                                    <li><a href="#"><img src="img/189_skin.jpg"><span>鬼谷子-幻乐之宴</span></a></li>
+                                    <li><a href="#"><img src="img/167_skin.jpg"><span>孙悟空-全息碎影</span></a></li>
+                                    <li><a href="#"><img src="img/169_skin.jpg"><span>后裔-黄金射手</span></a></li>
+                                    <li><a href="#"><img src="img/190_skin.jpg"><span>诸葛亮-掌控之力</span></a></li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="hreo_pic_list clearfix">
-                            <ul>
-                                <li><a href="#"><img src="img/125.jpg"><span>元歌</span></a></li>
-                                <li><a href="#"><img src="img/197.jpg"><span>奕星</span></a></li>
-                                <li><a href="#"><img src="img/503.jpg"><span>狂铁</span></a></li>
-                                <li><a href="#"><img src="img/504.jpg"><span>米莱迪</span></a></li>
+                        <!-- 周免英雄-->
+                        <div class="free_hero" id="freehero">
+                            <ul class="clearfix hreo_pic_list">
+                                <li>
+                                    <a href="#"><img src="img/111.jpg"/><span>孙尚香</span></a>
+                                </li>
+                                <li><a href="#"><img src="img/196.jpg"/><span>百里守约</span></a></li>
+                                <li><a href="#"><img src="img/187.jpg"/><span>东皇太一</span></a></li>
+                                <li><a href="#"><img src="img/186.jpg"/><span>太乙真人</span></a></li>
+                                <li><a href="#"><img src="img/503.jpg"/><span>狂铁</span></a></li>
+                                <li><a href="#"><img src="img/175.jpg"/><span>钟馗</span></a></li>
+                                <li><a href="#"><img src="img/179.jpg"/><span>女娲</span></a></li>
+                                <li><a href="#"><img src="img/more_hero.jpg"class="a1"/><span><img src="img/more_hero.jpg"class="a1"/></span></a></li>
                             </ul>
+                            <p> <span></span>限免时间:2018-8-27至2018-9-2</p>
                         </div>
-                    </div>
-                    <!-- 新皮肤-->
-                    <div class="new_skin2">
-                        <div class="skin1">
-                            <a href="#"><img src="img/137_skin.jpg"></a>
-                        </div>
-                        <div class="skin1_cont">
-                            <p>新英雄: 司马懿-魇语军师</p>
-                            <p>上线时间:2018-08-23</p>
-                        </div>
-                        <div class="hreo_pic_list clearfix">
-                            <ul>
-                                <li><a href="#"><img src="img/189_skin.jpg"><span>鬼谷子-幻乐之宴</span></a></li>
-                                <li><a href="#"><img src="img/167_skin.jpg"><span>孙悟空-全息碎影</span></a></li>
-                                <li><a href="#"><img src="img/169_skin.jpg"><span>后裔-黄金射手</span></a></li>
-                                <li><a href="#"><img src="img/190_skin.jpg"><span>诸葛亮-掌控之力</span></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!-- 周免英雄-->
-                    <div class="free_hero">
-                        <ul class="clearfix">
-                            <li>
-                                <a href="#"><img src="img/111.jpg"/></a>
-                            </li>
-                            <li><a href="#"><img src="img/196.jpg"/></a></li>
-                            <li><a href="#"><img src="img/187.jpg"/></a></li>
-                            <li><a href="#"><img src="img/186.jpg"/></a></li>
-                            <li><a href="#"><img src="img/503.jpg"/></a></li>
-                            <li><a href="#"><img src="img/175.jpg"/></a></li>
-                            <li><a href="#"><img src="img/179.jpg"/></a></li>
-                            <li><a href="#"><img src="img/more_hero.jpg"/></a></li>
-                        </ul>
-                        <p> <span></span>限免时间:2018-8-27至2018-9-2</p>
                     </div>
                 </div>
 			</div>
@@ -508,16 +510,18 @@
         </div>
     </div>
 	<br><br><br>
-	<script src="js/slideshow.js"></script>
     <script src="js/jquery-1.11.3.js"></script>
+	<script src="js/slideshow.js"></script>
     <script>
-
     </script>
     <script>
 //    $(".a1>img").mouseenter(function(){
 //        $(".a1>img").hide();
 //        $(".a1>span").show();
 //    })
+
+
+
     /*$(".h2").mouseenter(function(){
         $(".m-1").hide();
         $(".new_skin2").show();
