--- a/it's my project/header.html
+++ b/it's my project/header.html
@@ -162,15 +162,17 @@
                 <div class="news_center fl">
                     <div id="newsTap"class="newsTap">
                         <ul class="tab-hd clearfix">
-                            <li><a href="#">全部</a></li>
-                            <li><a href="#">新闻</a></li>
-                            <li><a href="#">公告</a></li>
-                            <li><a href="#">活动</a></li>
-                            <li><a href="#">赛事</a></li>
+                            <li><a href="#news1">全部</a></li>
+                            <li><a href="#news2">新闻</a></li>
+                            <li><a href="#news3">公告</a></li>
+                            <li><a href="#news4">活动</a></li>
+                            <li><a href="#news5">赛事</a></li>
                         </ul>
                         <a href="#"class="a1">...</a>
                     </div>
-                    <div class="news-con">
+                    <div>
+                    <!--1-->
+                    <div class="news-con" id="news1">
                         <ul>
 							<li class="line-sp"><a href="#">7月31全服不停机更新公告</a></li>		
 							<li>
@@ -184,6 +186,70 @@
 							<li><a class="news-txt"href="#">冠军杯国际赛韩国KZ战队战力分析</a></li>
 						</ul>
                     </div>
+                    <!--2-->
+                    <div class="news-con1" id="news2">
+                        <ul>
+							<li class="line-sp"><a href="#">蝴蝶蓝创作,首部官方授权电竞...</a></li>		
+							<li>
+							<a class="news-txt"href="#">新英雄爆料 防御塔都能奶的英雄免！费！...</a>
+							</li>		
+							<li><a class="news-txt"href="#">《王者荣耀》亮相智博会,在"大数据+..."</a></li>
+							<li><a class="news-txt"href="#">亚运会电竞首金！中国团队勇夺亚运会王者荣...</a></li>
+							<li><a class="news-txt"href="#">当文学遇上电竞：蝴蝶蓝空降王者荣耀作...</a></li>
+							<li><a class="news-txt"href="#">大学还能这么玩儿？！武汉开赛季我们来...</a></li>
+							<li><a class="news-txt"href="#">【国际城市邀请赛总回顾】以王者会友...</a></li>
+							<li><a class="news-txt"href="#">新版本爆料第⑦弹 | 贴心优化抢先看，突...</a></li>
+						</ul>
+                    </div>
+                    <!--3-->
+                    <div class="news-con1"id="news3">
+                        <ul>
+							<li class="line-sp"><a href="#">9月4日全服不停机更新公告</a></li>		
+							<li>
+							<a class="news-txt"href="#">8月23日【正式服】“星计划”版本更新公告08/22</a>
+							</li>		
+							<li><a class="news-txt"href="#">关于金色仲夏夜之梦皮肤半身像优化说明09/04</a></li>
+							<li><a class="news-txt"href="#">9月2日体验服停机更新公告09/02</a></li>
+							<li><a class="news-txt"href="#">关于部分召唤师QQ/微信好友不显示的问题说明08/31</a></li>
+							<li><a class="news-txt"href="#">8月31日体验服停机更新公告08/31</a></li>
+							<li><a class="news-txt"href="#">【已补发】健康系统异常限制问题说明08/30
+                            </a></li>
+							<li><a class="news-txt"href="#">8月24日-8月28日巅峰赛中“演员”惩罚名单08/29
+                            </a></li>
+						</ul>
+                    </div>
+                    <!--4-->
+                    <div class="news-con1"id="news4">
+                        <ul>
+							<li class="line-sp"><a href="#">赛事...
+                                守护与勇气 两大硬气英雄的相会</a></li>		
+							<li>
+							<a class="news-txt"href="#">CCTV13《新闻周刊》报道AoV电竞国家队，老帅亮相央视坦言电竞不易</a>
+							</li>		
+							<li><a class="news-txt"href="#">冠军杯国际赛澳门EMC战队战力分析</a></li>
+							<li><a class="news-txt"href="#">净化游戏环境声明及处罚公告（7月30日-8月2日）</a></li>
+							<li><a class="news-txt"href="#">7月30日-8月3日巅峰赛中“演员”惩罚名单</a></li>
+							<li><a class="news-txt"href="#">助威冠军杯 家门口观赛新体验和战队周边都安排了！</a></li>
+							<li><a class="news-txt"href="#">冠军杯国际赛欧美IMT战队战力分析</a></li>
+							<li><a class="news-txt"href="#">冠军杯国际赛韩国KZ战队战力分析</a></li>
+						</ul>
+                    </div>
+                    <!--5-->
+                    <div class="news-con1"id="news5">
+                        <ul>
+							<li class="line-sp"><a href="#">9月4日周二12：00 KPL秋季赛门</a></li>		
+							<li>
+							<a class="news-txt"href="#">CCTV13《新闻周刊》报道AoV电竞国家队，老帅亮相央视坦言电竞不易</a>
+							</li>		
+							<li><a class="news-txt"href="#">冠军杯国际赛澳门EMC战队战力分析</a></li>
+							<li><a class="news-txt"href="#">净化游戏环境声明及处罚公告（7月30日-8月2日）</a></li>
+							<li><a class="news-txt"href="#">7月30日-8月3日巅峰赛中“演员”惩罚名单</a></li>
+							<li><a class="news-txt"href="#">助威冠军杯 家门口观赛新体验和战队周边都安排了！</a></li>
+							<li><a class="news-txt"href="#">冠军杯国际赛欧美IMT战队战力分析</a></li>
+							<li><a class="news-txt"href="#">冠军杯国际赛韩国KZ战队战力分析</a></li>
+						</ul>
+                    </div>
+                </div>
                 </div>
                 <div class="download_pannel fl">
                     <a href="#"class="download_btn"></a>
