--- a/it's my project/new_hero.html
+++ b/it's my project/new_hero.html
@@ -33,8 +33,32 @@
                 </div>
                 <div class="close">
                     <a href="#"class="closex">关闭</a>
-                    <a href="https://www.baidu.com"class="wxlogin">微信用户登录</a>
+                    <a href="#"class="wxlogin">微信用户登录</a>
                     <a href="https://www.jd.com"class="qqlogin">QQ用户登录</a>
+                </div>
+                <div class="wx">
+                    <a href="#"class="closex">×</a>
+                    <h1>微信登录</h1>
+                    <div>
+                        <img src="img2/001-dhnxz6dhDLIr.jpg">
+                    </div>
+                    <span>请使用微信扫描二维码登录</span>
+                    <h3>"王者荣耀"</h3>
+                </div>
+                <div class="zh">
+                        <a href="#"class="closex">×</a>
+                        <h1>账号密码登录</h1>
+                        <h3>推荐使用<a href="#">快速安全登录,</a>防止盗号</h3>
+                        <div>
+                            <form action="">
+                                <input type="text"><br>
+                                <input type="password"><br>
+                                <input type="submit" value="登录">
+                            </form>
+                        </div>
+                        <div>
+                            <span>忘记密码?</span><a href="#">注册新账号</a><span>|</span><a href="#">意见反馈</a><span>|</span>
+                        </div>
                 </div>
             </div>
         </div>
