--- a/it's my project/new_hero.html
+++ b/it's my project/new_hero.html
@@ -34,7 +34,7 @@
                 <div class="close">
                     <a href="#"class="closex">关闭</a>
                     <a href="#"class="wxlogin">微信用户登录</a>
-                    <a href="https://www.jd.com"class="qqlogin">QQ用户登录</a>
+                    <a href="#"class="qqlogin">QQ用户登录</a>
                 </div>
                 <div class="wx">
                     <a href="#"class="closex">×</a>
@@ -50,9 +50,9 @@
                         <h1>账号密码登录</h1>
                         <h3>推荐使用<a href="#">快速安全登录,</a>防止盗号</h3>
                         <div>
-                            <form action="">
-                                <input type="text"><br>
-                                <input type="password"><br>
+                            <form action="#">
+                                <input type="text"placeholder="请输入账号">
+                                <input type="password"placeholder="请输入密码">
                                 <input type="submit" value="登录">
                             </form>
                         </div>
