--- a/it's my project/header.html
+++ b/it's my project/header.html
@@ -126,7 +126,7 @@
                 <div id="rotate"class="rotate fl ">
                     <ul id="promoInner"class="promo-list clearfix">
                         <li class="promo-item fl">
-                            <a href="#"id="zgl">
+                            <a href="one.html"id="zgl">
                                 <img src="img/zgl.jpg" class="show"alt="诸葛亮新造型爆料"/>
                             </a>
                         </li>
