--- a/it's my project/new_hero.html
+++ b/it's my project/new_hero.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/base.css"/>
     <link rel="stylesheet" href="css/new_hero.css"/>
     <link rel="stylesheet" href="css/new_footer.css"/>
+    <script src="js/jquery-3.2.1.js"></script>
 </head>
 <body>
     <!-- header-->
@@ -181,9 +182,11 @@
             </section>
         </div>
         <div id="toTop"><a href="#"id="a1">返回顶部</a></div>
+
     </div>
-    <footer id="new_footer"></footer>
+    <footer id="footer"></footer>
     <script src="js/jquery-1.11.3.js"></script>
+
     <script src="js/close.js">
         /*$(".login").click(function(){
             $(".close").show();
@@ -213,8 +216,11 @@
             e.preventDefault();
             window.scrollTo(0,0);
         }
+        $(document).ready(function(){
+            $("#footer").load("new_footer.html");
+        })
 	</script>
     <script src="js/ajax.js"></script>
-    <script src="js/new_footer.js"></script>
+    <!--<script src="js/new_footer.js"></script>-->
 </body>
 </html>
